app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
} */

body {
  color: rgb(var(--foreground-rgb));
  background: #fff;
  @apply font-serif;
}

a {
  @apply underline;
}

h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5,
h6,
.h6 {
  @apply font-sans;
}

h2,
.h2 {
  @apply font-medium text-[1.75rem] md:text-[2.5rem];
}

h3,
.h3 {
  @apply font-semibold text-2xl md:text-3xl;
}

h4,
.h4 {
  @apply font-bold text-xl md:text-2xl;
}

h5,
.h5 {
  @apply font-bold text-lg md:text-xl uppercase;
}

h6,
.h6 {
  @apply font-extrabold text-lg md:text-lg;
}

html body {
  font-family: Helvetica, sans-serif;
}

.gradient-text {
  background: -webkit-linear-gradient(rgb(239, 239, 239), rgb(159, 159, 159));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

